--- a/src/public/index.html
+++ b/src/public/index.html
@@ -31,9 +31,11 @@
             </div>
             <div class="flex-box">
                 <div class="base-url-container">
-                    <p class="base-path">Base Path:</p>
-                    <select id="baseUrlSelector" class="base-url-selector">
-                    </select>
+                    <div id="base-url-container" style="display: none;">
+                        <p class="base-path">Base Path:</p>
+                        <select id="baseUrlSelector" class="base-url-selector">
+                        </select>
+                    </div>
                 </div>
                 <div>
                     <button class="primary-button" onclick="showModal()">Headers</button>
