fixed minnor issues and added keywords

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="primary-button" onclick="showModal()">Headers</button>
+                    <button id="globalHeadersBtn" class="primary-button displayNon" onclick="showModal()">Headers</button>
                 </div>
             </div>
         </div>
