added put method

--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -28,6 +28,7 @@
                         <select id="playground-method-selector" class="playground-method-selector">
                             <option value="get">GET</option>
                             <option value="post">POST</option>
+                            <option value="put">PUT</option>
                             <option value="patch">PATCH</option>
                             <option value="delete">DELETE</option>
                         </select>
