made responsive and changed version

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -37,6 +37,9 @@
                         </select>
                     </div>
                 </div>
+            </div>
+            <div class="flex-box">
+                <div></div>
                 <div>
                     <button id="globalHeadersBtn" class="primary-button displayNon" onclick="showModal()">Headers</button>
                 </div>
