add playground on off check

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -18,7 +18,7 @@
                     <h3 class="name">outport</h3>
                 </div>
 
-                <div>
+                <div id="playground-container" class="displayNon">
                     <a class="primary-button" href="playground">Playground</a>
                 </div>
             </div>
