fixed formsubmit issue

--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -22,7 +22,7 @@
     <main>
         <section>
             <span id="tooltip" style="visibility: hidden; position: absolute;">Copied</span>
-            <form onsubmit="sendRequest(); return false;">
+            <form id="request-form">
                 <div class="playground-url-container">
                     <div class="playground-endpoint">
                         <select id="playground-method-selector" class="playground-method-selector">
