--- a/src/public/playground/index.html
+++ b/src/public/playground/index.html
@@ -197,7 +197,7 @@
                                             src="../assets/copy_icon.png" /></button></div>
                             </div>
                         </div>
-                        <div id="playground_response_header_content" class="header-content">
+                        <div id="playground_response_header_content">
                             <div id="playground_response_body_content" class="tab-content active">
                                 <div id="playground_respBody_wrapper" class="respBody">
                                     <pre id="playground_respBody"></pre>
