fixed playground url long issue

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div id="playground-container" class="displayNon">
-                    <a class="primary-button" href="playground">Playground</a>
+                    <button id="playground-btn" onclick="goToPlaygroundWithoutData()" class="primary-button">Playground</button>
                 </div>
             </div>
             <div class="title-container">
